--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -152,6 +152,11 @@ msgstr "Active"
 msgid "Active Couch Potato"
 msgstr "Active Couch Potato"
 
+#. js-lingui-explicit-id
+#: src/pages/TheCrucible/Profession/components/CustomSkillForm.tsx:109
+msgid "custom-skill-form.bonus-points-reminder"
+msgstr "custom-skill-form.bonus-points-reminder"
+
 #: src/types/characterTypes.ts:189
 msgid "Adroit"
 msgstr "Adroit"
@@ -259,15 +264,26 @@ msgid "Bland"
 msgstr "Bland"
 
 #: src/pages/TheCrucible/index.tsx:51
+#: src/pages/TheCrucible/Profession/components/CustomSkillForm.tsx:126
 #: src/pages/TheCrucible/Profession/components/ChooseProfession.tsx:155
 msgid "Bonds"
 msgstr "Bonds"
 
-#: src/pages/TheCrucible/Profession/components/ProfessionSkillInput.tsx:195
+#: src/pages/TheCrucible/Profession/components/CustomSkillForm.tsx:127
+msgid "Bonds represent meaningful relationships your agent has with non-player characters."
+msgstr "Bonds represent meaningful relationships your agent has with non-player characters."
+
+#: src/pages/TheCrucible/Profession/components/ProfessionSkillInput.tsx:210
+#: src/pages/TheCrucible/Profession/components/CustomSkillInput.tsx:232
 msgid "Bonus"
 msgstr "Bonus"
 
+#: src/pages/TheCrucible/Profession/components/CustomSkillForm.tsx:141
+msgid "Bonus Points"
+msgstr "Bonus Points"
+
 #: src/pages/TheCrucible/Profession/components/StandardSkillForm.tsx:90
+#: src/pages/TheCrucible/Profession/components/CustomSkillForm.tsx:164
 msgid "Bonus Points Remaining"
 msgstr "Bonus Points Remaining"
 
@@ -510,7 +526,8 @@ msgstr "Engaging"
 msgid "Engineer"
 msgstr "Engineer"
 
-#: src/pages/TheCrucible/Profession/components/ProfessionSkillInput.tsx:170
+#: src/pages/TheCrucible/Profession/components/SubtypeEditor.tsx:83
+#: src/pages/TheCrucible/Profession/components/ProfessionSkillInput.tsx:185
 msgid "Enter a Subtype"
 msgstr "Enter a Subtype"
 
@@ -1018,6 +1035,10 @@ msgstr "Pliable"
 msgid "Point Buy"
 msgstr "Point Buy"
 
+#: src/pages/TheCrucible/Profession/components/CustomSkillInput.tsx:221
+msgid "Points"
+msgstr "Points"
+
 #: src/utils/Professions.ts:588
 msgid "Police Officer"
 msgstr "Police Officer"
@@ -1093,12 +1114,17 @@ msgid "Repulsive"
 msgstr "Repulsive"
 
 #: src/pages/TheCrucible/Profession/components/StandardSkillForm.tsx:94
+#: src/pages/TheCrucible/Profession/components/CustomSkillForm.tsx:169
 msgid "Reset Bonus Points"
 msgstr "Reset Bonus Points"
 
 #: src/pages/TheCrucible/Profession/index.tsx:66
 msgid "Reset Profession"
 msgstr "Reset Profession"
+
+#: src/pages/TheCrucible/Profession/components/CustomSkillForm.tsx:160
+msgid "Reset Skill Points"
+msgstr "Reset Skill Points"
 
 #: src/pages/TheCrucible/Statistics/components/StatsDisplays/ManualInputStats.tsx:83
 msgid "Reset Statistics"
@@ -1177,6 +1203,14 @@ msgstr "Signal intelligence, breaking codes"
 msgid "Skill Choices Remaining"
 msgstr "Skill Choices Remaining"
 
+#: src/pages/TheCrucible/Profession/components/CustomSkillForm.tsx:137
+msgid "Skill Points"
+msgstr "Skill Points"
+
+#: src/pages/TheCrucible/Profession/components/CustomSkillForm.tsx:158
+msgid "Skill Points Remaining"
+msgstr "Skill Points Remaining"
+
 #: src/pages/TheCrucible/Profession/components/ProfessionalGuidance.tsx:79
 msgid "Skill Rating"
 msgstr "Skill Rating"
@@ -1230,6 +1264,10 @@ msgstr "Start"
 #: src/pages/TheCrucible/Profession/components/ProfessionChoices.tsx:55
 msgid "starts at"
 msgstr "starts at"
+
+#: src/pages/TheCrucible/Profession/components/CustomSkillInput.tsx:216
+msgid "Starts at:"
+msgstr "Starts at:"
 
 #: src/pages/TheCrucible/index.tsx:49
 msgid "Statistics"
@@ -1325,6 +1363,10 @@ msgstr "Title:"
 #: src/pages/About/index.tsx:129
 msgid "to purchase Delta Green source materials and learn more."
 msgstr "to purchase Delta Green source materials and learn more."
+
+#: src/pages/TheCrucible/Profession/components/CustomSkillInput.tsx:243
+msgid "Total"
+msgstr "Total"
 
 #: src/types/characterTypes.ts:1335
 msgid "Unarmed Combat"
